# jit-open

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  test.yml
jit_open/: __init__.py  cli.py  jit_open.py  subparsers.py
tests/: test_cli.py  test_library.py
