[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = 'Jit-Open'
description = 'Just in time open files.'
version = '1.0.3'

authors = [{name = 'Jeroen F.J. Laros', email = 'jlaros@fixedpoint.nl'}]
urls = {homepage = 'https://github.com/jfjlaros/jit-open'}
keywords = ['bioinformatics', 'JustInTime', 'files']
readme = 'README.rst'
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering']
license = 'MIT'

